k8s/tezblock/hangzhounet/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tezblock-hangzhounet-frontend
  namespace: tezblock
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tezblock-hangzhounet.prod.gke.papers.tech
        - hangzhounet.tezblock.io
      secretName: tezblock-hangzhounet-prod-tls
  rules:
    - host: tezblock-hangzhounet.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tezblock-hangzhounet-frontend
              servicePort: 80
    - host: hangzhounet.tezblock.io
      http:
        paths:
          - backend:
              serviceName: tezblock-hangzhounet-frontend
              servicePort: 80
